--- a/index.html
+++ b/index.html
@@ -315,8 +315,8 @@
   </section>
   <!-- Portfolio Section End -->
 
-  <!-- Clients Section Start -->
-  <section id="skills" class="bg-slate-100 pb-16 pt-36 dark:bg-dark">
+  <!-- Skills Section Start -->
+  <section id="skills" class="bg-slate-100 pb-16 pt-36 dark:bg-slate-800">
     <div class="container">
       <div class="w-full px-4" data-aos="zoom-in" data-aos-duration="1000">
         <div class="mx-auto mb-16 text-center">
@@ -332,82 +332,81 @@
 
       <div class="lg:flex">
         <div class="md:grid grid-cols-2 lg:grid-cols-3">
-          <!-- Card 1 -->
+          <!-- HTML -->
           <div class="card rounded-xl  mx-6 my-7 group ">
             <div
-              class="bg-[#EEEEEE] dark:bg-slate-800 dark:text-white  group-hover:bg-[#DDDDDD] dark:group-hover:bg-primary transition duration-700 ease-in-out  rounded-xl p-8">
+              class="bg-[#EEEEEE] dark:bg-dark dark:text-white  group-hover:bg-primary dark:group-hover:bg-primary transition duration-700 ease-in-out  rounded-xl p-8">
               <div class="flex pb-5">
-                <i
-                  class="fa-brands fa-html5 text-5xl pb-2"></i>
+                <i class="fa-brands fa-html5 text-5xl pb-2"></i>
               </div>
-              <p>Attributes, Elements, Links, Formatting, Images, Layout, Semantics, Id, Classes, File Paths, Favicon, Input Types, Table-list.</p>
+              <p>Attributes, Elements, Links, Formatting, Images, Layout, Semantics, Id, Classes, File Paths, Favicon,
+                Input Types, Table-list.</p>
             </div>
           </div>
 
-          <!-- Card 2 -->
+          <!-- CSS -->
           <div class="card rounded-xl mx-6 my-7 group ">
             <div
-              class="bg-[#EEEEEE] dark:bg-slate-800 dark:text-white  group-hover:bg-[#DDDDDD] dark:group-hover:bg-primary transition duration-700 ease-in-out  rounded-xl p-8">
+              class="bg-[#EEEEEE] dark:bg-dark dark:text-white  group-hover:bg-primary dark:group-hover:bg-primary transition duration-700 ease-in-out  rounded-xl p-8">
               <div class="flex pb-5">
-                <i
-                  class="fa-brands fa-css3 text-5xl pb-2"></i>
+                <i class="fa-brands fa-css3 text-5xl pb-2"></i>
               </div>
               <p>Selectors, Background, Border, Box-model, Color, Margin and Padding, Sizing, Z-index, Position.</p>
             </div>
           </div>
 
-          <!-- Card 3 -->
+          <!-- JavaScript -->
           <div class="card rounded-xl mx-6 my-7 group ">
             <div
-              class="bg-[#EEEEEE] dark:bg-slate-800 dark:text-white  group-hover:bg-[#DDDDDD] dark:group-hover:bg-primary transition duration-700 ease-in-out  rounded-xl p-8">
+              class="bg-[#EEEEEE] dark:bg-dark dark:text-white  group-hover:bg-primary dark:group-hover:bg-primary transition duration-700 ease-in-out  rounded-xl p-8">
               <div class="flex pb-5">
-                <i
-                  class="fa-brands fa-square-js text-5xl pb-2"></i>
+                <i class="fa-brands fa-square-js text-5xl pb-2"></i>
               </div>
-              <p>Function, Getting Variable, Arrow Function, Jquery, Localstorage & Session, Storage Data, Event Handler, Ajax Menipulation, DOM Manipulation, Fetching API.</p>
+              <p>Function, Getting Variable, Arrow Function, Jquery, Localstorage & Session, Storage Data, Event
+                Handler, Ajax Menipulation, DOM Manipulation, Fetching API.</p>
             </div>
           </div>
 
-          <!-- Card 4 -->
+          <!-- Bootstrap -->
           <div class="card rounded-xl mx-6 my-7 group ">
             <div
-              class="bg-[#EEEEEE] dark:bg-slate-800 dark:text-white  group-hover:bg-[#DDDDDD] dark:group-hover:bg-primary transition duration-700 ease-in-out  rounded-xl p-8">
+              class="bg-[#EEEEEE] dark:bg-dark dark:text-white  group-hover:bg-primary dark:group-hover:bg-primary transition duration-700 ease-in-out  rounded-xl p-8">
               <div class="flex pb-5">
-                <i
-                  class="fa-brands fa-bootstrap text-5xl pb-2"></i>
+                <i class="fa-brands fa-bootstrap text-5xl pb-2"></i>
               </div>
-              <p>Ui kit, Installation, Configuration with CDN, Typography, Customize, Sass,  Layouting, Breakout, Containers, Column, Grid, Z-index, CSS grid, Navbar, Form, Form control input, Validation.</p>
+              <p>Ui kit, Installation, Configuration with CDN, Typography, Customize, Sass, Layouting, Breakout,
+                Containers, Column, Grid, Z-index, CSS grid, Navbar, Form, Form control input, Validation.</p>
             </div>
           </div>
 
-          <!-- Card 5 -->
+          <!-- Tailwind Css -->
           <div class="card rounded-xl mx-6 my-7 group ">
             <div
-              class="bg-[#EEEEEE] dark:bg-slate-800 dark:text-white  group-hover:bg-[#DDDDDD] dark:group-hover:bg-primary transition duration-700 ease-in-out  rounded-xl p-8">
+              class="bg-[#EEEEEE] dark:bg-dark dark:text-white  group-hover:bg-primary dark:group-hover:bg-primary transition duration-700 ease-in-out  rounded-xl p-8">
               <div class="flex pb-5">
-                <i
-                  class="bx bxl-tailwind-css text-5xl pb-2"></i>
+                <i class="bx bxl-tailwind-css text-5xl pb-2"></i>
               </div>
               <p>Basic utility, Layouting, Transform, Transition, Animation, Responsive Design, Flexbox, Grid.</p>
             </div>
           </div>
 
-          <!-- Card 6 -->
+          <!-- Laravel -->
           <div class="card rounded-xl mx-6 my-7 group ">
             <div
-              class="bg-[#EEEEEE] dark:bg-slate-800 dark:text-white  group-hover:bg-[#DDDDDD] dark:group-hover:bg-primary transition duration-700 ease-in-out  rounded-xl p-8">
+              class="bg-[#EEEEEE] dark:bg-dark dark:text-white  group-hover:bg-primary dark:group-hover:bg-primary transition duration-700 ease-in-out  rounded-xl p-8">
               <div class="flex pb-5">
-                <i
-                  class="fa-brands fa-solid fa-laravel text-5xl pb-2"></i>
+                <i class="fa-brands fa-solid fa-laravel text-5xl pb-2"></i>
               </div>
-              <p>Laravel 9 and Laravel 11, Model, View, Controller, Route, Route Group, Prefix, Middleware, Relation, ERD, CRUD, Slicing Template, Hosting, Payment Gateway (Midtrans), Command Artisan, Migration, Create API.</p>
+              <p>Laravel 9 and Laravel 11, Model, View, Controller, Route, Route Group, Prefix, Middleware, Relation,
+                ERD, CRUD, Slicing Template, Hosting, Payment Gateway (Midtrans), Command Artisan, Migration, Create
+                API.</p>
             </div>
           </div>
         </div>
       </div>
     </div>
   </section>
-  <!-- Clients Section End -->
+  <!-- Skills Section End -->
 
   <!-- Contact Section Start -->
   <section id="contact" class="pb-32 pt-36 dark:bg-slate-800">
@@ -459,13 +458,15 @@
         <div class="mb-12 w-full px-4 font-medium text-slate-300 md:w-1/3">
           <h2 class="mb-5 text-4xl font-bold text-white">M. Jahran</h2>
           <h3 class="mb-2 text-2xl font-bold">Contact Us</h3>
+          <!-- Mail -->
           <div class="flex items-center">
-            <svg xmlns="http://www.w3.org/2000/svg" height="20" viewBox="0 96 960 960" width="20"
-              class="mr-2 fill-current py-0">
-              <path
-                d="M168 864q-29 0-50.5-21.5T96 792V360q0-29 21.5-50.5T168 288h624q30 0 51 21.5t21 50.5v432q0 29-21 50.5T792 864H168Zm312-240 312-179v-85L480 539 168 360v85l312 179Z" />
-            </svg>
+            <i class="fa-solid fa-envelope text-2xl mr-2 fill-current py-0"></i>
             <p class="py-0">rann020070@gmail.com</p>
+          </div>
+          <!-- Whatsapp -->
+          <div class="flex items-center">
+            <i class="fa-brands fa-whatsapp text-2xl mr-2 fill-current py-0"></i>
+            <p class="py-0">+62 838-9307-8704</p>
           </div>
         </div>
         <div class="mb-12 w-full px-4 md:w-1/3">
@@ -498,6 +499,10 @@
             </li>
             <li>
               <a href="#portfolio" class="mb-3 inline-block text-base hover:text-primary">Portfolio
+              </a>
+            </li>
+            <li>
+              <a href="#skills" class="mb-3 inline-block text-base hover:text-primary">Skills
               </a>
             </li>
             <li>
